apps/base/web-static/namespace.yml
apiVersion: v1
kind: Namespace
metadata:
  name: __NAME__
  labels:
    app.kubernetes.io/part-of: __NAME__
    environment: production
  annotations:
    argocd.argoproj.io/sync-wave: "-1"
